# micro_ros_assignment

./: .gitignore  README.md
blink_synk/: CMakeLists.txt
blink_synk/src/: BlinkAgent.cpp  BlinkWorker.cpp  CMakeLists.txt  main.cpp  pico_uart_transport.c
microros_ws/install/: local_setup.sh  setup.sh
microros_ws/install/micro_ros_agent/lib/: libmicroxrcedds_agent.so.2.4.2
microros_ws/install/micro_ros_agent/lib/micro_ros_agent/: micro_ros_agent
microros_ws/install/micro_ros_agent/share/ament_index/resource_index/parent_prefix_path/: micro_ros_agent
microros_ws/install/micro_ros_agent/share/micro_ros_agent/: local_setup.sh  package.sh
microros_ws/install/micro_ros_setup/share/micro_ros_setup/: local_setup.sh  package.sh
scripts/: install_pico_sdk.sh  install_ros2.sh  monitor_topics.sh  run_agent.sh
